Add unit tests in SqlServer Connector