@@ -19,6 +19,7 @@
  */
 package com.amazonaws.athena.connectors.sqlserver;
 
+import com.amazonaws.athena.connector.credentials.CredentialsProvider;
 import com.amazonaws.athena.connector.lambda.data.BlockAllocator;
 import com.amazonaws.athena.connector.lambda.data.BlockAllocatorImpl;
 import com.amazonaws.athena.connector.lambda.data.BlockUtils;
@@ -27,6 +28,8 @@ import com.amazonaws.athena.connector.lambda.data.SchemaBuilder;
 import com.amazonaws.athena.connector.lambda.domain.Split;
 import com.amazonaws.athena.connector.lambda.domain.TableName;
 import com.amazonaws.athena.connector.lambda.domain.predicate.Constraints;
+import com.amazonaws.athena.connector.lambda.metadata.GetDataSourceCapabilitiesRequest;
+import com.amazonaws.athena.connector.lambda.metadata.GetDataSourceCapabilitiesResponse;
 import com.amazonaws.athena.connector.lambda.metadata.GetSplitsRequest;
 import com.amazonaws.athena.connector.lambda.metadata.GetSplitsResponse;
 import com.amazonaws.athena.connector.lambda.metadata.GetTableLayoutRequest;
@@ -37,12 +40,13 @@ import com.amazonaws.athena.connector.lambda.metadata.ListSchemasRequest;
 import com.amazonaws.athena.connector.lambda.metadata.ListSchemasResponse;
 import com.amazonaws.athena.connector.lambda.metadata.ListTablesRequest;
 import com.amazonaws.athena.connector.lambda.metadata.ListTablesResponse;
+import com.amazonaws.athena.connector.lambda.metadata.optimizations.OptimizationSubType;
 import com.amazonaws.athena.connector.lambda.security.FederatedIdentity;
 import com.amazonaws.athena.connectors.jdbc.TestBase;
 import com.amazonaws.athena.connectors.jdbc.connection.DatabaseConnectionConfig;
 import com.amazonaws.athena.connectors.jdbc.connection.JdbcConnectionFactory;
-import com.amazonaws.athena.connector.credentials.CredentialsProvider;
 import com.amazonaws.athena.connectors.sqlserver.resolver.SQLServerJDBCCaseResolver;
+import org.apache.arrow.vector.types.pojo.ArrowType;
 import org.apache.arrow.vector.types.pojo.Field;
 import org.apache.arrow.vector.types.pojo.Schema;
 import org.junit.Assert;
@@ -57,22 +61,29 @@ import software.amazon.awssdk.services.secretsmanager.model.GetSecretValueReques
 import software.amazon.awssdk.services.secretsmanager.model.GetSecretValueResponse;
 
 import java.sql.Connection;
+import java.sql.DatabaseMetaData;
 import java.sql.PreparedStatement;
 import java.sql.ResultSet;
+import java.sql.ResultSetMetaData;
 import java.sql.SQLException;
 import java.sql.Types;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 import java.util.Set;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.stream.Collectors;
 
 import static com.amazonaws.athena.connectors.sqlserver.SqlServerConstants.PARTITION_NUMBER;
-import static org.mockito.ArgumentMatchers.any;
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertNotNull;
+import static org.junit.Assert.assertTrue;
 import static org.mockito.ArgumentMatchers.nullable;
 
 public class SqlServerMetadataHandlerTest
@@ -97,7 +108,7 @@ public class SqlServerMetadataHandlerTest
         System.setProperty("aws.region", "us-east-1");
         this.jdbcConnectionFactory = Mockito.mock(JdbcConnectionFactory.class, Mockito.RETURNS_DEEP_STUBS);
         this.connection = Mockito.mock(Connection.class, Mockito.RETURNS_DEEP_STUBS);
-        logger.info(" this.connection.."+ this.connection);
+        logger.info(" this.connection.." + this.connection);
         Mockito.when(this.jdbcConnectionFactory.getConnection(nullable(CredentialsProvider.class))).thenReturn(this.connection);
         this.secretsManager = Mockito.mock(SecretsManagerClient.class);
         this.athena = Mockito.mock(AthenaClient.class);
@@ -110,7 +121,7 @@ public class SqlServerMetadataHandlerTest
     @Test
     public void getPartitionSchema()
     {
-        Assert.assertEquals(SchemaBuilder.newBuilder()
+        assertEquals(SchemaBuilder.newBuilder()
                         .addField(PARTITION_NUMBER, org.apache.arrow.vector.types.Types.MinorType.VARCHAR.getType()).build(),
                 this.sqlServerMetadataHandler.getPartitionSchema("testCatalogName"));
     }
@@ -120,7 +131,7 @@ public class SqlServerMetadataHandlerTest
             throws Exception
     {
         BlockAllocator blockAllocator = new BlockAllocatorImpl();
-        Constraints constraints = Mockito.mock(Constraints.class);
+        Constraints constraints = createEmptyConstraint();
         TableName tableName = new TableName("testSchema", "testTable");
         Schema partitionSchema = this.sqlServerMetadataHandler.getPartitionSchema("testCatalogName");
         Set<String> partitionCols = partitionSchema.getFields().stream().map(Field::getName).collect(Collectors.toSet());
@@ -136,7 +147,7 @@ public class SqlServerMetadataHandlerTest
 
         String[] columns = {PARTITION_NUMBER};
         int[] types = {Types.VARCHAR};
-        Object[][] values = {{"2"},{"3"}};
+        Object[][] values = {{"2"}, {"3"}};
         ResultSet resultSet = mockResultSet(columns, types, values, new AtomicInteger(-1));
         Mockito.when(preparedStatement.executeQuery()).thenReturn(resultSet);
 
@@ -152,13 +163,13 @@ public class SqlServerMetadataHandlerTest
         for (int i = 0; i < getTableLayoutResponse.getPartitions().getRowCount(); i++) {
             actualValues.add(BlockUtils.rowToString(getTableLayoutResponse.getPartitions(), i));
         }
-        Assert.assertEquals(Arrays.asList("[partition_number : 1:::pf:::pc]","[partition_number : 2:::pf:::pc]","[partition_number : 3:::pf:::pc]"), actualValues);
+        assertEquals(Arrays.asList("[partition_number : 1:::pf:::pc]", "[partition_number : 2:::pf:::pc]", "[partition_number : 3:::pf:::pc]"), actualValues);
 
         SchemaBuilder expectedSchemaBuilder = SchemaBuilder.newBuilder();
         expectedSchemaBuilder.addField(FieldBuilder.newBuilder(PARTITION_NUMBER, org.apache.arrow.vector.types.Types.MinorType.VARCHAR.getType()).build());
         Schema expectedSchema = expectedSchemaBuilder.build();
-        Assert.assertEquals(expectedSchema, getTableLayoutResponse.getPartitions().getSchema());
-        Assert.assertEquals(tableName, getTableLayoutResponse.getTableName());
+        assertEquals(expectedSchema, getTableLayoutResponse.getPartitions().getSchema());
+        assertEquals(tableName, getTableLayoutResponse.getTableName());
 
         Mockito.verify(preparedStatement, Mockito.times(1)).setString(1, getTableLayoutRequest.getTableName().getSchemaName() + "." +
                 getTableLayoutRequest.getTableName().getTableName());
@@ -169,7 +180,7 @@ public class SqlServerMetadataHandlerTest
             throws Exception
     {
         BlockAllocator blockAllocator = new BlockAllocatorImpl();
-        Constraints constraints = Mockito.mock(Constraints.class);
+        Constraints constraints = createEmptyConstraint();
         TableName tableName = new TableName("testSchema", "testTable");
         Schema partitionSchema = this.sqlServerMetadataHandler.getPartitionSchema("testCatalogName");
         Set<String> partitionCols = partitionSchema.getFields().stream().map(Field::getName).collect(Collectors.toSet());
@@ -192,19 +203,19 @@ public class SqlServerMetadataHandlerTest
         Mockito.when(this.connection.getMetaData().getSearchStringEscape()).thenReturn(null);
         GetTableLayoutResponse getTableLayoutResponse = this.sqlServerMetadataHandler.doGetTableLayout(blockAllocator, getTableLayoutRequest);
 
-        Assert.assertEquals(values.length, getTableLayoutResponse.getPartitions().getRowCount());
+        assertEquals(values.length, getTableLayoutResponse.getPartitions().getRowCount());
 
         List<String> actualValues = new ArrayList<>();
         for (int i = 0; i < getTableLayoutResponse.getPartitions().getRowCount(); i++) {
             actualValues.add(BlockUtils.rowToString(getTableLayoutResponse.getPartitions(), i));
         }
-        Assert.assertEquals(Arrays.asList("[partition_number : 0]"), actualValues);
+        assertEquals(List.of("[partition_number : 0]"), actualValues);
 
         SchemaBuilder expectedSchemaBuilder = SchemaBuilder.newBuilder();
         expectedSchemaBuilder.addField(FieldBuilder.newBuilder(PARTITION_NUMBER, org.apache.arrow.vector.types.Types.MinorType.VARCHAR.getType()).build());
         Schema expectedSchema = expectedSchemaBuilder.build();
-        Assert.assertEquals(expectedSchema, getTableLayoutResponse.getPartitions().getSchema());
-        Assert.assertEquals(tableName, getTableLayoutResponse.getTableName());
+        assertEquals(expectedSchema, getTableLayoutResponse.getPartitions().getSchema());
+        assertEquals(tableName, getTableLayoutResponse.getTableName());
 
         Mockito.verify(preparedStatement, Mockito.times(1)).setString(1, getTableLayoutRequest.getTableName().getSchemaName() + "." +
                 getTableLayoutRequest.getTableName().getTableName());
@@ -214,7 +225,7 @@ public class SqlServerMetadataHandlerTest
     public void doGetTableLayoutWithSQLException()
             throws Exception
     {
-        Constraints constraints = Mockito.mock(Constraints.class);
+        Constraints constraints = createEmptyConstraint();
         TableName tableName = new TableName("testSchema", "testTable");
         Schema partitionSchema = this.sqlServerMetadataHandler.getPartitionSchema("testCatalogName");
         Set<String> partitionCols = partitionSchema.getFields().stream().map(Field::getName).collect(Collectors.toSet());
@@ -234,7 +245,7 @@ public class SqlServerMetadataHandlerTest
             throws Exception
     {
         BlockAllocator blockAllocator = new BlockAllocatorImpl();
-        Constraints constraints = Mockito.mock(Constraints.class);
+        Constraints constraints = createEmptyConstraint();
         TableName tableName = new TableName("testSchema", "testTable");
 
         PreparedStatement viewCheckPreparedStatement = Mockito.mock(PreparedStatement.class);
@@ -286,9 +297,9 @@ public class SqlServerMetadataHandlerTest
                 PARTITION_NUMBER, "3",
                 "PARTITIONING_COLUMN", "pc",
                 "PARTITION_FUNCTION", "pf"));
-        Assert.assertEquals(expectedSplits.size(), getSplitsResponse.getSplits().size());
+        assertEquals(expectedSplits.size(), getSplitsResponse.getSplits().size());
         Set<Map<String, String>> actualSplits = getSplitsResponse.getSplits().stream().map(Split::getProperties).collect(Collectors.toSet());
-        Assert.assertEquals(expectedSplits, actualSplits);
+        assertEquals(expectedSplits, actualSplits);
     }
 
     @Test
@@ -296,7 +307,7 @@ public class SqlServerMetadataHandlerTest
             throws Exception
     {
         BlockAllocator blockAllocator = new BlockAllocatorImpl();
-        Constraints constraints = Mockito.mock(Constraints.class);
+        Constraints constraints = createEmptyConstraint();
         TableName tableName = new TableName("testSchema", "testTable");
 
         PreparedStatement viewCheckPreparedStatement = Mockito.mock(PreparedStatement.class);
@@ -332,9 +343,9 @@ public class SqlServerMetadataHandlerTest
 
         Set<Map<String, String>> expectedSplits = new HashSet<>();
         expectedSplits.add(Collections.singletonMap(PARTITION_NUMBER, "0"));
-        Assert.assertEquals(expectedSplits.size(), getSplitsResponse.getSplits().size());
+        assertEquals(expectedSplits.size(), getSplitsResponse.getSplits().size());
         Set<Map<String, String>> actualSplits = getSplitsResponse.getSplits().stream().map(Split::getProperties).collect(Collectors.toSet());
-        Assert.assertEquals(expectedSplits, actualSplits);
+        assertEquals(expectedSplits, actualSplits);
     }
 
     @Test
@@ -342,7 +353,7 @@ public class SqlServerMetadataHandlerTest
             throws Exception
     {
         BlockAllocator blockAllocator = new BlockAllocatorImpl();
-        Constraints constraints = Mockito.mock(Constraints.class);
+        Constraints constraints = createEmptyConstraint();
         TableName tableName = new TableName("testSchema", "testTable");
         Schema partitionSchema = this.sqlServerMetadataHandler.getPartitionSchema("testCatalogName");
         Set<String> partitionCols = partitionSchema.getFields().stream().map(Field::getName).collect(Collectors.toSet());
@@ -358,7 +369,7 @@ public class SqlServerMetadataHandlerTest
 
         String[] columns = {PARTITION_NUMBER};
         int[] types = {Types.INTEGER};
-        Object[][] values = {{2},{3}};
+        Object[][] values = {{2}, {3}};
         ResultSet resultSet = mockResultSet(columns, types, values, new AtomicInteger(-1));
         Mockito.when(preparedStatement.executeQuery()).thenReturn(resultSet);
 
@@ -381,7 +392,7 @@ public class SqlServerMetadataHandlerTest
                 "PARTITIONING_COLUMN", "pc",
                 "PARTITION_FUNCTION", "pf"));
         Set<Map<String, String>> actualSplits = getSplitsResponse.getSplits().stream().map(Split::getProperties).collect(Collectors.toSet());
-        Assert.assertEquals(expectedSplits, actualSplits);
+        assertEquals(expectedSplits, actualSplits);
     }
 
     @Test
@@ -401,7 +412,7 @@ public class SqlServerMetadataHandlerTest
         ListTablesResponse listTablesResponse = this.sqlServerMetadataHandler.doListTables(
                 blockAllocator, new ListTablesRequest(this.federatedIdentity, "testQueryId",
                         "testCatalog", "testSchema", null, 1));
-        Assert.assertEquals("1", listTablesResponse.getNextToken());
+        assertEquals("1", listTablesResponse.getNextToken());
         Assert.assertArrayEquals(expected, listTablesResponse.getTables().toArray());
 
         preparedStatement = Mockito.mock(PreparedStatement.class);
@@ -414,7 +425,7 @@ public class SqlServerMetadataHandlerTest
         listTablesResponse = this.sqlServerMetadataHandler.doListTables(
                 blockAllocator, new ListTablesRequest(this.federatedIdentity, "testQueryId",
                         "testCatalog", "testSchema", "1", 1));
-        Assert.assertEquals("2", listTablesResponse.getNextToken());
+        assertEquals("2", listTablesResponse.getNextToken());
         Assert.assertArrayEquals(nextExpected, listTablesResponse.getTables().toArray());
     } 
 
@@ -442,9 +453,9 @@ public class SqlServerMetadataHandlerTest
         Mockito.when(connection.getCatalog()).thenReturn("testCatalog");
         GetTableResponse getTableResponse = this.sqlServerMetadataHandler.doGetTable(
                 blockAllocator, new GetTableRequest(this.federatedIdentity, "testQueryId", "testCatalog", inputTableName, Collections.emptyMap()));
-        Assert.assertEquals(expected, getTableResponse.getSchema());
-        Assert.assertEquals(inputTableName, getTableResponse.getTableName());
-        Assert.assertEquals("testCatalog", getTableResponse.getCatalogName());
+        assertEquals(expected, getTableResponse.getSchema());
+        assertEquals(inputTableName, getTableResponse.getTableName());
+        assertEquals("testCatalog", getTableResponse.getCatalogName());
     }
 
     @Test
@@ -453,7 +464,217 @@ public class SqlServerMetadataHandlerTest
     {
         ListSchemasRequest listSchemasRequest = Mockito.mock(ListSchemasRequest.class);
         Mockito.when(listSchemasRequest.getCatalogName()).thenReturn("fakedatabase");
-        Assert.assertEquals(new ListSchemasResponse("schemas", Collections.emptyList()).toString(),
+        assertEquals(new ListSchemasResponse("schemas", Collections.emptyList()).toString(),
                 sqlServerMetadataHandler.doListSchemaNames(this.allocator, listSchemasRequest).toString());
+    }
+
+    @Test
+    public void doGetTable_SqlServerSpecificTypes_ReturnsMappedArrowTypes() throws Exception {
+            BlockAllocator blockAllocator = new BlockAllocatorImpl();
+            String[] schema = {"DATA_TYPE", "COLUMN_SIZE", "COLUMN_NAME", "DECIMAL_DIGITS", "NUM_PREC_RADIX"};
+            Object[][] values = {
+                    {Types.BIT, 1, "col_bit", 0, 0},
+                    {Types.TINYINT, 3, "col_tinyint", 0, 0},
+                    {Types.NUMERIC, 10, "col_numeric", 2, 10},
+                    {Types.DOUBLE, 15, "col_smallmoney", 2, 10}, // simulate SMALLMONEY
+                    {Types.DATE, 0, "col_date", 0, 0},
+                    {Types.TIMESTAMP, 0, "col_datetime", 0, 0}, // simulate DATETIME
+                    {Types.TIMESTAMP, 0, "col_datetime2", 0, 0}, // simulate DATETIME2
+                    {Types.TIMESTAMP, 0, "col_smalldatetime", 0, 0}, // simulate SMALLDATETIME
+                    {Types.TIMESTAMP_WITH_TIMEZONE, 0, "col_datetimeoffset", 0, 0}
+            };
+
+            AtomicInteger rowNumber = new AtomicInteger(-1);
+            ResultSet resultSet = mockResultSet(schema, values, rowNumber);
+
+            // Mocking sys.columns response (DATA_TYPE column as string names from enum)
+            ResultSet columnTypesResultSet = mockResultSet(
+                    new String[]{"COLUMN_NAME", "DATA_TYPE"},
+                    new Object[][]{
+                            {"col_bit", "BIT"},
+                            {"col_tinyint", "TINYINT"},
+                            {"col_numeric", "NUMERIC"},
+                            {"col_smallmoney", "SMALLMONEY"},
+                            {"col_date", "DATE"},
+                            {"col_datetime", "DATETIME"},
+                            {"col_datetime2", "DATETIME2"},
+                            {"col_smalldatetime", "SMALLDATETIME"},
+                            {"col_datetimeoffset", "DATETIMEOFFSET"}
+                    },
+                    new AtomicInteger(-1)
+            );
+
+            SchemaBuilder expectedSchemaBuilder = SchemaBuilder.newBuilder();
+            expectedSchemaBuilder.addField(FieldBuilder.newBuilder("col_bit", org.apache.arrow.vector.types.Types.MinorType.TINYINT.getType()).build());
+            expectedSchemaBuilder.addField(FieldBuilder.newBuilder("col_tinyint", org.apache.arrow.vector.types.Types.MinorType.SMALLINT.getType()).build());
+            expectedSchemaBuilder.addField(FieldBuilder.newBuilder("col_numeric", org.apache.arrow.vector.types.Types.MinorType.FLOAT8.getType()).build());
+            expectedSchemaBuilder.addField(FieldBuilder.newBuilder("col_smallmoney", org.apache.arrow.vector.types.Types.MinorType.FLOAT8.getType()).build());
+            expectedSchemaBuilder.addField(FieldBuilder.newBuilder("col_date", org.apache.arrow.vector.types.Types.MinorType.DATEDAY.getType()).build());
+            expectedSchemaBuilder.addField(FieldBuilder.newBuilder("col_datetime", org.apache.arrow.vector.types.Types.MinorType.DATEMILLI.getType()).build());
+            expectedSchemaBuilder.addField(FieldBuilder.newBuilder("col_datetime2", org.apache.arrow.vector.types.Types.MinorType.DATEMILLI.getType()).build());
+            expectedSchemaBuilder.addField(FieldBuilder.newBuilder("col_smalldatetime", org.apache.arrow.vector.types.Types.MinorType.DATEMILLI.getType()).build());
+            expectedSchemaBuilder.addField(FieldBuilder.newBuilder("col_datetimeoffset", org.apache.arrow.vector.types.Types.MinorType.DATEMILLI.getType()).build());
+            PARTITION_SCHEMA.getFields().forEach(expectedSchemaBuilder::addField);
+            Schema expected = expectedSchemaBuilder.build();
+
+            TableName inputTableName = new TableName("TESTSCHEMA", "TESTTABLE");
+
+            Mockito.when(connection.getMetaData().getColumns("testCatalog", inputTableName.getSchemaName(), inputTableName.getTableName(), null))
+                    .thenReturn(resultSet);
+            Mockito.when(connection.getCatalog()).thenReturn("testCatalog");
+
+            // Mock the connection used inside getSchema to return the mocked column type resultSet
+            Connection metadataConn = Mockito.mock(Connection.class);
+            PreparedStatement stmt = Mockito.mock(PreparedStatement.class);
+            Mockito.when(stmt.executeQuery()).thenReturn(columnTypesResultSet);
+            Mockito.when(metadataConn.prepareStatement(Mockito.anyString())).thenReturn(stmt);
+            Mockito.when(jdbcConnectionFactory.getConnection(Mockito.any())).thenReturn(metadataConn);
+
+            DatabaseMetaData metadata = Mockito.mock(DatabaseMetaData.class);
+            Mockito.when(metadata.getSearchStringEscape()).thenReturn("\\");
+            Mockito.when(metadata.getColumns(Mockito.any(), Mockito.any(), Mockito.any(), Mockito.any()))
+                    .thenReturn(resultSet);
+            Mockito.when(metadataConn.getMetaData()).thenReturn(metadata);
+
+            GetTableResponse getTableResponse = this.sqlServerMetadataHandler.doGetTable(
+                    blockAllocator,
+                    new GetTableRequest(this.federatedIdentity, "testQueryId", "testCatalog", inputTableName, Collections.emptyMap())
+            );
+
+            assertEquals(expected, getTableResponse.getSchema());
+    }
+
+    @Test
+    public void doGetTable_UnsupportedType_FallsBackToVarchar() throws Exception {
+            BlockAllocator blockAllocator = new BlockAllocatorImpl();
+            String[] schema = {"DATA_TYPE", "COLUMN_SIZE", "COLUMN_NAME", "DECIMAL_DIGITS", "NUM_PREC_RADIX"};
+            Object[][] values = {
+                    {Types.OTHER, 255, "col_sql_variant", 0, 0}, // simulate unsupported SQL_VARIANT
+            };
+
+            AtomicInteger rowNumber = new AtomicInteger(-1);
+            ResultSet resultSet = mockResultSet(schema, values, rowNumber);
+
+            // Mocking sys.columns response (DATA_TYPE column as string names from enum)
+            ResultSet columnTypesResultSet = mockResultSet(
+                    new String[]{"COLUMN_NAME", "DATA_TYPE"},
+                    new Object[][]{
+                            {"col_sql_variant", "SQL_VARIANT"}
+                    },
+                    new AtomicInteger(-1)
+            );
+
+            SchemaBuilder expectedSchemaBuilder = SchemaBuilder.newBuilder();
+            expectedSchemaBuilder.addField(FieldBuilder.newBuilder("col_sql_variant", org.apache.arrow.vector.types.Types.MinorType.VARCHAR.getType()).build());
+            PARTITION_SCHEMA.getFields().forEach(expectedSchemaBuilder::addField);
+            Schema expected = expectedSchemaBuilder.build();
+
+            TableName inputTableName = new TableName("TESTSCHEMA", "TESTTABLE");
+
+            Mockito.when(connection.getMetaData().getColumns("testCatalog", inputTableName.getSchemaName(), inputTableName.getTableName(), null))
+                    .thenReturn(resultSet);
+            Mockito.when(connection.getCatalog()).thenReturn("testCatalog");
+
+            // Mock the connection used inside getSchema to return the mocked column type resultSet
+            Connection metadataConn = Mockito.mock(Connection.class);
+            PreparedStatement stmt = Mockito.mock(PreparedStatement.class);
+            Mockito.when(stmt.executeQuery()).thenReturn(columnTypesResultSet);
+            Mockito.when(metadataConn.prepareStatement(Mockito.anyString())).thenReturn(stmt);
+            Mockito.when(jdbcConnectionFactory.getConnection(Mockito.any())).thenReturn(metadataConn);
+
+            DatabaseMetaData metadata = Mockito.mock(DatabaseMetaData.class);
+            Mockito.when(metadata.getSearchStringEscape()).thenReturn("\\");
+            Mockito.when(metadata.getColumns(Mockito.any(), Mockito.any(), Mockito.any(), Mockito.any()))
+                    .thenReturn(resultSet);
+            Mockito.when(metadataConn.getMetaData()).thenReturn(metadata);
+
+            GetTableResponse getTableResponse = this.sqlServerMetadataHandler.doGetTable(
+                    blockAllocator,
+                    new GetTableRequest(this.federatedIdentity, "testQueryId", "testCatalog", inputTableName, Collections.emptyMap())
+            );
+
+            assertEquals(expected, getTableResponse.getSchema());
+    }
+
+    @Test
+    public void convertDatasourceTypeToArrow_SqlServerSpecificTypes_ReturnsMappedArrowTypes() throws SQLException {
+            ResultSetMetaData metaData = Mockito.mock(ResultSetMetaData.class);
+            Map<String, String> configOptions = new HashMap<>();
+            int precision = 0;
+
+            // Map of SQL Server data type -> expected ArrowType
+            Map<String, ArrowType> expectedMappings = new HashMap<>();
+            expectedMappings.put("BIT", org.apache.arrow.vector.types.Types.MinorType.TINYINT.getType());
+            expectedMappings.put("TINYINT", org.apache.arrow.vector.types.Types.MinorType.SMALLINT.getType());
+            expectedMappings.put("NUMERIC", org.apache.arrow.vector.types.Types.MinorType.FLOAT8.getType());
+            expectedMappings.put("SMALLMONEY", org.apache.arrow.vector.types.Types.MinorType.FLOAT8.getType());
+            expectedMappings.put("DATE", org.apache.arrow.vector.types.Types.MinorType.DATEDAY.getType());
+            expectedMappings.put("DATETIME", org.apache.arrow.vector.types.Types.MinorType.DATEMILLI.getType());
+            expectedMappings.put("DATETIME2", org.apache.arrow.vector.types.Types.MinorType.DATEMILLI.getType());
+            expectedMappings.put("SMALLDATETIME", org.apache.arrow.vector.types.Types.MinorType.DATEMILLI.getType());
+            expectedMappings.put("DATETIMEOFFSET", org.apache.arrow.vector.types.Types.MinorType.DATEMILLI.getType());
+
+            int index = 1;
+            for (Map.Entry<String, ArrowType> entry : expectedMappings.entrySet()) {
+                String sqlServerType = entry.getKey();
+                ArrowType expectedArrowType = entry.getValue();
+
+                Mockito.when(metaData.getColumnTypeName(index)).thenReturn(sqlServerType);
+
+                Optional<ArrowType> actual = sqlServerMetadataHandler.convertDatasourceTypeToArrow(index, precision, configOptions, metaData);
+
+                assertEquals(expectedArrowType, actual.get());
+
+                index++;
+            }
+    }
+
+    @Test
+    public void doGetDataSourceCapabilities_DefaultRequest_ReturnsExpectedCapabilities()
+    {
+        BlockAllocator allocator = new BlockAllocatorImpl();
+        GetDataSourceCapabilitiesRequest request =
+                new GetDataSourceCapabilitiesRequest(federatedIdentity, "testQueryId", "testCatalog");
+
+        GetDataSourceCapabilitiesResponse response =
+                sqlServerMetadataHandler.doGetDataSourceCapabilities(allocator, request);
+
+        Map<String, List<OptimizationSubType>> capabilities = response.getCapabilities();
+
+        assertEquals("testCatalog", response.getCatalogName());
+
+        // Filter pushdown
+        List<OptimizationSubType> filterPushdown = capabilities.get("supports_filter_pushdown");
+        assertNotNull("Expected supports_filter_pushdown capability to be present", filterPushdown);
+        assertEquals(2, filterPushdown.size());
+        assertTrue(filterPushdown.stream().anyMatch(subType -> subType.getSubType().equals("sorted_range_set")));
+        assertTrue(filterPushdown.stream().anyMatch(subType -> subType.getSubType().equals("nullable_comparison")));
+
+        // Complex expression pushdown
+        List<OptimizationSubType> complexPushdown = capabilities.get("supports_complex_expression_pushdown");
+        assertNotNull("Expected supports_complex_expression_pushdown capability to be present", complexPushdown);
+        assertEquals(1, complexPushdown.size());
+        OptimizationSubType complexSubType = complexPushdown.get(0);
+        assertEquals("supported_function_expression_types", complexSubType.getSubType());
+        assertNotNull("Expected function expression types to be present", complexSubType.getProperties());
+        assertFalse("Expected function expression types to be non-empty", complexSubType.getProperties().isEmpty());
+
+        // Top-N pushdown
+        List<OptimizationSubType> topNPushdown = capabilities.get("supports_top_n_pushdown");
+        assertNotNull("Expected supports_top_n_pushdown capability to be present", topNPushdown);
+        assertEquals(1, topNPushdown.size());
+        assertEquals("SUPPORTS_ORDER_BY", topNPushdown.get(0).getSubType());
+    }
+    
+    private Constraints createEmptyConstraint()
+    {
+        return new Constraints(
+                Collections.emptyMap(),
+                Collections.emptyList(),
+                Collections.emptyList(),
+                Constraints.DEFAULT_NO_LIMIT,
+                Collections.emptyMap(),
+                null
+        );
     }
 }
